# graphql-to-csv

./: .gitignore  README.md  graphql_schema_mapping.csv  pyproject.toml  requirements.dev.txt
src/graphql_to_csv/: main.py
tests/: graphql_to_csv_test.py
tests/files/: test1.graphql
